# ai-wallet

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  railway.json
.github/workflows/: ci.yml  publish-sdk.yml
sdk/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/agent_wallet/: __init__.py  client.py  exceptions.py  retry.py  types.py
sdk/tests/: __init__.py  conftest.py  test_exceptions.py  test_idempotency.py  test_retry.py
service/: Dockerfile  README.md  alembic.ini  pyproject.toml
service/agent_wallet_service/: __init__.py  main.py
service/agent_wallet_service/api/v1/: __init__.py  admin.py  holds.py  payment_intents.py  refunds.py  resolve.py  transfers.py  wallets.py
service/agent_wallet_service/core/: config.py
service/agent_wallet_service/db/: __init__.py  session.py
service/agent_wallet_service/middleware/: __init__.py  audit.py  auth.py  rate_limit.py
service/agent_wallet_service/models/: __init__.py  api_key.py  audit_log.py  capture.py  external_identity.py  hold.py  journal_entry.py  journal_line.py  ledger_account.py  payment_intent.py  refund.py  wallet.py
service/agent_wallet_service/schemas/: admin.py  common.py  deposit.py  hold.py  payment_intent.py  refund.py  transfer.py  wallet.py
service/agent_wallet_service/scripts/: seed.py
service/agent_wallet_service/services/: admin.py  balance.py  deposits.py  holds.py  ledger.py  payment_intents.py  recipient.py  refunds.py  transactions.py
service/alembic/: env.py
service/alembic/versions/: 20240131_000001_initial_schema.py
service/tests/: __init__.py  conftest.py  test_concurrency.py  test_holds.py  test_idempotency.py  test_limits.py  test_payment_intents.py  test_recipient_resolution.py  test_refunds.py  test_scopes.py
test_agent/: README.md  requirements.txt  simple_agent.py  test_agent_flow.py  test_sdk_standalone.py  test_wallet_operations.py  wallet_tool.py
