[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-wallet"
version = "0.1.0"
description = "Python SDK for Agent Wallet API - secure financial operations for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Agent Wallet Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["wallet", "agent", "fintech", "api", "sdk", "payments"]
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-httpx>=0.28.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/agent-wallet/agent-wallet"
Documentation = "https://github.com/agent-wallet/agent-wallet#readme"
Repository = "https://github.com/agent-wallet/agent-wallet"
Issues = "https://github.com/agent-wallet/agent-wallet/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_wallet"]

[tool.hatch.build.targets.sdist]
include = [
    "/agent_wallet",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
